# matlab_cpp_work_demo

./: .gitignore  CMakeLists.txt  LICENSE  README.html  README.md  derivation.ipynb  filter_1st_order.cpp  filter_1st_order.h  filter_1st_order.m  filter_1st_order.s  filter_1st_order_test.cpp  filter_1st_order_test.m  main.m  matrix_io.cpp  matrix_io.h  parameters.h
codegen_comparison/: fn_1st_order_filter.m  fn_1st_order_filter.s  fn_1st_order_filter_codegen.m
include/: Codegen-Filter1stOrder.hpp  Filter1stOrder.hpp  MatrixIO.hpp  Parameters.hpp
matlab/: codegen__filter_1st_order.m  filter_1st_order.m
src/: Codegen-Filter1stOrder.cpp  Filter1stOrder.cpp  MatrixIO.cpp  ParametersToFile.cpp
test/: test-filter.cpp
test/matlab/: run_all_tests.m  test__filter.m  test_filter.m
tests/: test_filter.cpp
tests/matlab/: test_filter.m
